# pyatomsk

./: LICENSE  README.md  pyproject.toml
src/pyatomsk/: __init__.py  commands.py  core.py  modes.py  options.py  utils.py  wrapper.py
tests/: base.py  basic_test.py  test_core.py  test_modes.py  test_options.py
