[project]
name = "pyatomsk"
version = "0.1.0"
description = "Python wrapper for Atomsk CLI"
authors = [{name="Ethan L. Edmunds", email="eledmunds1@sheffield.ac.uk"}]
maintainers = [{name="Ethan L. Edmunds", email="elemdmunds1@sheffield.ac.uk"}]
license = {text = "GPL-3.0"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]